RESOLVED FIXED147632
RenderTheme::baselinePosition() should take RenderBox instead of RenderObject.
https://bugs.webkit.org/show_bug.cgi?id=147632
Summary RenderTheme::baselinePosition() should take RenderBox instead of RenderObject.
alan
Reported 2015-08-04 10:14:56 PDT
SSIA
Attachments
Patch (10.97 KB, patch)
2015-08-04 10:21 PDT, alan
no flags
alan
Comment 1 2015-08-04 10:21:35 PDT
WebKit Commit Bot
Comment 2 2015-08-04 12:48:09 PDT
Comment on attachment 258181 [details] Patch Clearing flags on attachment: 258181 Committed r187878: <http://trac.webkit.org/changeset/187878>
WebKit Commit Bot
Comment 3 2015-08-04 12:48:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.