RenderTheme::baselinePosition() should take RenderBox instead of RenderObject. https://bugs.webkit.org/show_bug.cgi?id=147632

Reviewed by Andreas Kling.

It eliminates some redundant type checking and casting.

No change in functionality.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::baselinePosition):
* platform/efl/RenderThemeEfl.h:
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::baselinePosition):
* rendering/RenderTheme.h:
* rendering/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::baselinePosition):
* rendering/RenderThemeGtk.h:
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::baselinePosition):
* rendering/RenderThemeSafari.cpp:
(WebCore::RenderThemeSafari::baselinePosition):
* rendering/RenderThemeSafari.h:


Canonical link: https://commits.webkit.org/165696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187878 268f45cc-cd09-0410-ab3c-d52691b4dbfc