Source/WebCore/platform/efl/RenderThemeEfl.cpp
@@ -653,16 +653,11 @@ bool RenderThemeEfl::controlSupportsTints(const RenderObject& object) const
     return isEnabled(object);
 }
 
-int RenderThemeEfl::baselinePosition(const RenderObject& object) const
+int RenderThemeEfl::baselinePosition(const RenderBox& box) const
 {
-    if (!is<RenderBox>(object))
-        return 0;
-
-    if (object.style().appearance() == CheckboxPart
-    ||  object.style().appearance() == RadioPart)
-        return downcast<RenderBox>(object).marginTop() + downcast<RenderBox>(object).height() - 3;
-
-    return RenderTheme::baselinePosition(object);
+    if (box.style().appearance() == CheckboxPart || box.style().appearance() == RadioPart)
+        return box.marginTop() + box.height() - 3;
+    return RenderTheme::baselinePosition(box);
 }
 
 Color RenderThemeEfl::platformActiveSelectionBackgroundColor() const
